# SimpleDuckMl

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
docs/: hyperparameters.toml  log_output_model.toml
src/: container.py  main.py
src/activations/: i_activation.py  relu_activation.py  softmax_activation.py
src/datasets/: dataset.py  dataset_unpacker.py
src/layers/: convolutional_layer.py  dense_layer.py  flatten_layer.py  i_layer.py
src/loss/: cross_entropy_loss.py  i_loss.py  mse_loss.py
src/models/: model.py
src/simple_duck_ml/: __init__.py  container.py
src/simple_duck_ml/activations/: i_activation.py  relu_activation.py  softmax_activation.py
src/simple_duck_ml/dataset_unpacker/: i_data_source.py  in_memory_data_source.py  minibatch_bin_dataset_unpacker.py  streaming_data_source.py
src/simple_duck_ml/layers/: convolutional_layer.py  dense_layer.py  flatten_layer.py  i_layer.py
src/simple_duck_ml/loss/: cross_entropy_loss.py  i_loss.py  mse_loss.py
src/simple_duck_ml/models/: model.py
src/simple_duck_ml/serializers/: tensor_io.py
